2003-11-20  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic:
	* gnome-vfs.keys.in: added support for video/dv as per RFC 3189

2003-11-20  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in:
	* gnome-vfs.mime: added audio/x-ms-wax (Windows Audio Playlist)
	mime-type

2003-11-17  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.mime: .m4a for MPEG-4 audio

2003-11-17  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic:
	* gnome-vfs.keys.in: added MPEG-4 audio detection and mime-type
	(audio/x-m4a)

2003-11-05  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in: added type audio/x-ms-asf (seems to be used
	for audio-only ASF streams)

2003-10-27  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic:
	* gnome-vfs.keys.in:
	* gnome-vfs.mime: added Cinelerra editing sheets magic
	(Closes: #125489)

2003-10-12  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in: added image/pjpeg as a possible JPEG mime-type
	(Closes: #124409), translate the bitorrent and javascript entries
	now that the string freeze is over

2003-10-12  Christophe Fergeau  <teuf@gnome.org>

	* gnome-vfs-mime-magic: made ID3 sniffing more selective (closes
	  #124335) 

2003-10-05  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic:
	* gnome-vfs.keys.in: added BitTorrent mime-types and magic

2003-09-22  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.keys.in: added application/x-zip-compressed, the Outlook
	engineers ("I are one!") can't read either (Closes: #122947)

2003-09-15  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs.mime: added "pm" as a possible extension for text/x-perl
	(Closes: #121509)

2003-09-13  Bastien Nocera  <hadess@hadess.net>

	* gnome-vfs-mime-magic: detect FLAC files with ID3 headers as FLAC
	* gnome-vfs.keys.in: add image/jpg, the MacOS X Mailer engineers can't
	read properly (Closes: #122184)

2003-09-10  Bastien Nocera  <hadess@hadess.net>

	* configure.in: pump up to 2.4.0