@@ -1,3 +1,10 @@
+2003-12-01  Bastien Nocera  <hadess@hadess.net>
+
+	* gnome-vfs.keys.in:
+	* gnome-vfs.mime: rename video/vivo to video/vnd.vivo, remove
+	xanim and xmps as handlers for video files, mark a few strings
+	for translation (Closes: #94214)
+
 2003-11-20  Bastien Nocera  <hadess@hadess.net>
 
 	* gnome-vfs-mime-magic:
